# sql-repo-scanner

./: README.md  oracle-to-postgresql_analysis.jsonl  pyproject.toml
sql_repo_scanner/: __init__.py  agent.py
