[project]
name = "sql-repo-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "gitpython>=3.1.44",
    "google-adk>=0.5.0",
    "google-auth>=2.40.2",
    "mcp>=1.9.0",
    "python-dotenv>=1.1.0",
]
